# promptpunch

./: Cargo.toml  Makefile
examples/: base.rs  develop_business_idea.rs  web.rs
src/: lib.rs  llm.rs  main.rs  prompt.rs  web.rs
src/llm/: chat_gpt.rs  mod.rs
templates/: error.html  root.html
