[package]
name = "promptpunch"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
clap = { version = "4.5.23", features = ["derive"] }
derive_builder = "0.20.1"
log = "0.4.22"
reqwest = { version = "0.12.9", features = ["json", "socks", "rustls-tls"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
