[package]
name = "promptpunch"
version = "0.2.3"
edition = "2021"

[dependencies]
anyhow = "1.0.91"
askama = { version = "0.12.1", optional = true}
askama_axum = { version = "0.4.0", optional = true}
async-trait = "0.1.83"
axum = { version = "0.7.9", optional = true}
clap = { version = "4.5.23", features = ["derive"], optional = true }
derive_builder = "0.20.1"
log = "0.4.22"
reqwest = { version = "0.12.9", features = ["json", "socks"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt", "std", "tracing-log"], optional = true }

[features]
web = [
    "dep:axum",
    "dep:askama",
    "dep:askama_axum"
]
cli = ["dep:clap"]
